# nanochat-from-scratch

./: .gitignore  pyproject.toml  requirements.txt
finetune/: dspy_finetuning_modal.py
gpt2/: gpt2.ipynb  train_gpt2.py
makemore/: activations-gradients-batchnmorm.ipynb  makemore-youtube.ipynb  mlp.ipynb  ninja.ipynb
modal/: download_dataset_modal.py
nanogpt/: bigram.py  gpt-dev.ipynb
tokenizers/: README.md  gpt-tokenizer.ipynb
tokenizers/.ipynb_checkpoints/: gpt-tokenizer-checkpoint.ipynb
